@@ -1,5 +1,9 @@
 2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* build-uclibc.sh: enable building gdbserver.
+
+2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* arc-versions.sh: Updated for arc-uclibc-mainline branch of
 	uClibc and arc-3.8-ABI-v3 for Linux.
 	* build-uclibc.sh: No need for -DARC_LEGACY_PTRACE_ABI with
